<resources>
    <string name="app_name">biometricface</string>

    <!-- Please refer to https://azure.microsoft.com/en-us/services/cognitive-services/face/ to get your subscription key -->
    <!-- If you have subscription key with its corresponding endpoint, you can add them here to use the service -->
    <string name="subscription_key">ccda4649f32741818a169e1bfb8b69f7</string>
    <!--    <string name="endpoint">https://westus.api.cognitive.microsoft.com/face/v1.0</string>-->
    <string name="endpoint">https://brazilsouth.api.cognitive.microsoft.com/face/v1.0</string>

    <string name="ssd_imagenes">/data/user/0/com.reloader.biometricface/app_Images/</string>


    <!-- Main activity -->
    <string name="detection">Detection</string>
    <string name="face_verification">
Verificación cara a cara</string>
    <string name="person_verification">
Verificación de persona a persona</string>
    <string name="verification">Verificacion</string>
    <string name="identification">Identificacion</string>
    <string name="grouping">Grouping</string>
    <string name="find_similar_faces">Encuentra caras similares</string>
    <string name="detection_description">Detecta caras, puntos de referencia de cara, pose, sonrisa, gafas, género y edad.</string>
    <string name="verification_description">Autenticación entre dos caras o entre una cara y una persona.</string>
    <string name="grouping_description">Agrupe caras basadas en similitudes.</string>
    <string name="find_similar_face_description">Busca caras de aspecto similar.</string>
    <string name="identification_description">Identifica a la persona de una cara.</string>

    <!-- Tips to get subscription key shown on main activity-->

    <string name="add_subscription_key_tip_title">Azure subscription 1</string>
    <string name="add_subscription_key_tip">Por favor ingrese llave de subscripcion que corresponde fuente de endpoint archivo \"app/res/values/strings.xml\" para habilitar Face API.</string>

    <!-- Detection activity -->
    <string name="image">Imagen:</string>
    <string name="select_image">Selecciona\nImagen</string>
    <string name="result">Resultado:</string>
    <string name="detect">Detectar</string>

    <!-- Verification activity -->
    <string name="verify">Verificar</string>
    <string name="face_0">Rostro0:</string>
    <string name="face_1">Rostro1:</string>
    <string name="manage_persons">Administra\nPersonas</string>
    <string name="verification_menu">Verificacion\nMenu</string>

    <!-- Verification activity -->
    <string name="face">Face:</string>
    <string name="group">Group</string>

    <!-- Identification activity -->
    <string name="identify">Identify</string>
    <string name="manage_person_groups">Manage\nPerson\nGroups</string>
    <string name="person_groups">Person Groups</string>
    <string name="target_image">Target image</string>
    <string name="faces">
Caras en imagen</string>

    <!-- Person group management activities -->
    <string name="delete">Delete</string>
    <string name="done_and_save">Save</string>

    <string name="person_group_list">Lista Grupo de Personas</string>
    <string name="person_group_list_tip">- Presiona en grupo para editar.\n- Manten presionado para eliminar.</string>
    <string name="add_person_group">Agregar Grupo Personas</string>

    <string name="person_group">Grupo Personas</string>
    <string name="person_group_tip">- Tap on a person to edit.\n- Long press to delete.</string>
    <string name="person_group_name">Nombre  del Personas:</string>
    <string name="type_in_person_group_name_tip">Nombre (minimo 30 characteres)</string>
    <string name="add_person">Agregar Persona</string>

    <string name="person">Persona</string>
    <string name="persons">Personas</string>
    <string name="person_tip">-
Manten presionado una cara para eliminarla.</string>
    <string name="type_in_person_name_tip">Name (within 30 characters)</string>
    <string name="add_face">Agregar rostro</string>
    <string name="person_name">Persona nombre:</string>
    <string name="add_face_to_person">Add Faces To Person</string>
    <string name="select_face_tip">Selecciona caras de personas(si existe)  dando click en el checkbox.</string>

    <!-- Find similar faces and grouping activity -->
    <string name="zero_face">list caras : 0 faces in total</string>
    <string name="target_face">Target face:</string>
    <string name="all_faces">Todas caras:</string>
    <string name="add_faces">Agregar\nCara</string>
    <string name="similar_person_description">Finding matchPerson people...</string>
    <string name="similar_face_description">Finding matchFace faces...</string>

    <!-- Common in all activities -->
    <string name="progress_dialog_title">Espere por favor</string>
    <string name="view_log">Ver Log</string>

    <!-- Select image activity -->
    <string name="select_an_image">Seleccione una imagen</string>
    <string name="take_photo">Toma una foto</string>
    <string name="select_image_in_album">Desde Galeria</string>

    <!-- Logs -->
    <string name="log">Log:</string>
    <string name="detection_log">Detection Log</string>
    <string name="verification_log">Verification Log</string>
    <string name="find_similar_face_log">Find Similar Face Log</string>
    <string name="grouping_log">Grouping Log</string>
    <string name="identification_log">Identification Log</string>

    <!-- Warning messages -->
    <string name="person_name_empty_warning_message">El nombre de la persona no puede estar vacío</string>
    <string name="no_face_to_group">No hay caras para agrupar</string>
    <string name="no_person_group_selected_for_identification_warning">Ningún grupo de personas seleccionado</string>
    <string name="face_cannot_be_identified">Persona desconocida</string>
    <string name="user_provided_person_name">Nombre de la persona</string>
    <string name="user_provided_description_data">Datos del usuario</string>
    <string name="user_provided_person_group_name">Nombre del grupo de personas</string>
    <string name="user_provided_person_group_description_data">
Datos del usuario</string>
</resources>
