<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/info"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/view_margin"
        android:baselineAligned="false"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_weight="1">

            <RelativeLayout

              android:id="@+id/add_faces_control"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/view_margin"
                android:layout_marginRight="@dimen/view_margin">

                <TextView
                   android:id="@+id/text_all_faces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/zero_face" />

                <Button

                    android:id="@+id/add_faces"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/add_faces" />

            </RelativeLayout>

            <GridView
               android:id="@+id/all_faces"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/add_faces_control"
                android:layout_toRightOf="@id/add_faces_control"
                android:background="#E0E0E0"
                android:horizontalSpacing="@dimen/view_margin"
                android:numColumns="4"
                android:verticalSpacing="@dimen/view_margin" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result" />

        <ListView
            android:id="@+id/grouped_faces"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_weight="1"
            android:background="#E0E0E0"
            android:verticalSpacing="@dimen/view_margin" />

    </LinearLayout>

    <TextView
        android:id="@id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_bar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/group"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_weight="1"
            android:text="@string/group" />

        <Button
            android:id="@id/view_log"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/view_log" />

    </LinearLayout>

</RelativeLayout>
